internal/tags/y.output

state 0
	$accept: .root $end 
	root: .    (3)

	'`'  shift 2
	.  reduce 3 (src line 27)

	root  goto 1

state 1
	$accept:  root.$end 

	$end  accept
	.  error


state 2
	root:  '`'.tags '`' 
	root:  '`'.'`' 

	ident  shift 6
	'`'  shift 4
	.  error

	tags  goto 3
	tag  goto 5

state 3
	root:  '`' tags.'`' 
	tags:  tags.tag 

	ident  shift 6
	'`'  shift 7
	.  error

	tag  goto 8

state 4
	root:  '`' '`'.    (2)

	.  reduce 2 (src line 24)


state 5
	tags:  tag.    (4)

	.  reduce 4 (src line 31)


state 6
	tag:  ident.':' string_lit 

	':'  shift 9
	.  error


state 7
	root:  '`' tags '`'.    (1)

	.  reduce 1 (src line 20)


state 8
	tags:  tags tag.    (5)

	.  reduce 5 (src line 35)


state 9
	tag:  ident ':'.string_lit 

	string_lit  shift 10
	.  error


state 10
	tag:  ident ':' string_lit.    (6)

	.  reduce 6 (src line 39)


8 terminals, 4 nonterminals
7 grammar rules, 11/16000 states
0 shift/reduce, 0 reduce/reduce conflicts reported
53 working sets used
memory: parser 3/240000
0 extra closures
7 shift entries, 1 exceptions
4 goto entries
0 entries saved by goto default
Optimizer space used: output 12/240000
12 table entries, 1 zero
maximum spread: 8, maximum offset: 8
